<resources>
    <string name="app_name">Notes</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="save">Save note</string>
    <string name="share">Share note</string>
    <string name="note">Notes</string>
    <string name="save_message">You saved the note %1$s</string>
    <string name="note_date" translatable="false">16.08.22</string>
    <string name="add_button">Add Note</string>
    <string name="view_pager_activity" translatable="false">View Pager Activity</string>
    <string name="dialog_message">Do you really want to save the note?</string>
    <string name="positive">Yes</string>
    <string name="negative">No</string>
    <string name="title_activity_view_pager" translatable="false">ViewPagerActivity</string>
    <string name="back">Back</string>
    <string name="empty_note">Empty Note</string>
    <string name="untitled">Untitled</string>
    <string name="edit_button">Edit note</string>
    <string name="update">Update note</string>
    <string name="download">Download note from Firebase</string>
    <string name="note_description" translatable="false">Note Description</string>
    <string name="internet_unavailable">Internet unavailable</string>
    <string name="hide">Hide</string>
    <string name="search">Search</string>
    <string name="search_hint">Search by notes</string>
    <string name="web_view" translatable="false">Web View</string>
    <string name="location" translatable="false">Location</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="update_location">Update location</string>
    <string name="location_unenabled">Your location provider is turned off. Please turn it on.</string>
    <string name="custom_view" translatable="false">Custom TextView</string>
    <string name="html_text"><![CDATA[<h1>Text in the title of HTML</h1><p>Some text from html</p>]]></string>
</resources>