<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_latitude"
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_note_item"
            android:text="@string/latitude"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_longitude"
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_note_item"
            android:text="@string/longitude"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_latitude" />

        <TextView
            android:id="@+id/latitude"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_note_item"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_latitude"
            app:layout_constraintStart_toEndOf="@id/tv_latitude" />

        <TextView
            android:id="@+id/longitude"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_note_item"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_longitude"
            app:layout_constraintStart_toEndOf="@id/tv_longitude" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_get_location"
            style="@style/Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_floating_button"
            android:contentDescription="@string/update_location"
            android:src="@drawable/ic_baseline_my_location_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>