<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_edit_activity">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_text_color_edit_activity"
                android:textSize="@dimen/title_text_size"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_edit_activity"
            android:layout_marginEnd="@dimen/margin_edit_activity"
            android:layout_marginBottom="@dimen/margin_edit_activity">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/text"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_text_color_edit_activity"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_button"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/margin_edit_activity"
            android:layout_marginBottom="@dimen/margin_edit_activity"
            android:backgroundTint="@color/teal_200"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:icon="@drawable/ic_baseline_save_24" />

    </LinearLayout>

</ScrollView>